k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: circuits
  labels:
    app.kubernetes.io/part-of: circuits
